[gd_scene load_steps=45 format=2]

[ext_resource path="res://Assets/Lv1 knapper/Bremse_-_L.png" type="Texture" id=1]
[ext_resource path="res://Assets/skabelon.png" type="Texture" id=2]
[ext_resource path="res://Assets/Lv1 knapper/Bremse_-_M.png" type="Texture" id=3]
[ext_resource path="res://Assets/b-11-ubetinget-vigepligt 2.jpg.png" type="Texture" id=4]
[ext_resource path="res://Assets/Lv1 knapper/V_Blink_Lys_-_M.png" type="Texture" id=5]
[ext_resource path="res://Assets/Lv1 knapper/Backspejl_-_L.png" type="Texture" id=6]
[ext_resource path="res://Assets/skilt.png" type="Texture" id=7]
[ext_resource path="res://Assets/Lv1 knapper/Blå_Bil_-_M.png" type="Texture" id=8]
[ext_resource path="res://Assets/Lv1 knapper/H_Blink_Lys_-_M.png" type="Texture" id=9]
[ext_resource path="res://Assets/Lv1 knapper/Speed_-_L.png" type="Texture" id=10]
[ext_resource path="res://Assets/Lv1 knapper/Backspejl_-_M 1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Lv1 knapper/H_Sidespejl_-_L.png" type="Texture" id=12]
[ext_resource path="res://Assets/Lv1 knapper/V_-_Sidespejl_-_M.png" type="Texture" id=13]
[ext_resource path="res://Assets/Lv1 knapper/Stop_-_L.png" type="Texture" id=14]
[ext_resource path="res://Assets/Lv1 knapper/Speed_-_M.png" type="Texture" id=15]
[ext_resource path="res://Assets/Lv1 knapper/Blå_Bil_-_L.png" type="Texture" id=16]
[ext_resource path="res://Assets/Koral_Bil_-_M.png" type="Texture" id=17]
[ext_resource path="res://Assets/Lv1 knapper/Stop_-_M.png" type="Texture" id=18]
[ext_resource path="res://Assets/Lv1 knapper/H_Blink_Lys_-_L.png" type="Texture" id=19]
[ext_resource path="res://Assets/Lv1 knapper/V_Blink_Lys_-_L.png" type="Texture" id=20]
[ext_resource path="res://Assets/Lv1 knapper/V_-_Sidespejl_-_L.png" type="Texture" id=21]
[ext_resource path="res://Assets/?.png" type="Texture" id=22]
[ext_resource path="res://Bane 1.gd" type="Script" id=23]
[ext_resource path="res://Assets/Font/nexa/Nexa-Heavy.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://Assets/Km (1).png" type="Texture" id=25]
[ext_resource path="res://Assets/V_-_Sidespejl_-_L_Gul (1).png" type="Texture" id=26]
[ext_resource path="res://Assets/Fart_.png" type="Texture" id=27]
[ext_resource path="res://Assets/Styr.png" type="Texture" id=28]
[ext_resource path="res://Assets/__-_M.png" type="Texture" id=29]
[ext_resource path="res://Assets/Skive_.png" type="Texture" id=30]
[ext_resource path="res://Assets/Vigepligt (1).jpg" type="Texture" id=31]
[ext_resource path="res://Assets/H_Sidespejl_-_L_Gul (1).png" type="Texture" id=32]
[ext_resource path="res://Assets/Lv1 knapper/H_Sidespejl_-_M.png" type="Texture" id=33]
[ext_resource path="res://Assets/_Koral_Bil_-_L.png" type="Texture" id=34]
[ext_resource path="res://Assets/yesstar.png" type="Texture" id=35]
[ext_resource path="res://Assets/nostar.png" type="Texture" id=36]
[ext_resource path="res://Assets/Font/nexa/Nexa-ExtraLight.ttf" type="DynamicFontData" id=37]
[ext_resource path="res://Assets/Sounds/videogame-menu-button-click.wav" type="AudioStream" id=38]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 24 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 37 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.85098, 0.843137, 0.843137, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[node name="Bane 1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 23 )

[node name="baggrund" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 31 )

[node name="bilindefra" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="gbil" type="TextureButton" parent="."]
margin_left = 384.0
margin_top = 104.0
margin_right = 504.0
margin_bottom = 199.0
texture_normal = ExtResource( 34 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 17 )
texture_disabled = ExtResource( 17 )

[node name="bbil" type="TextureButton" parent="."]
margin_left = 536.0
margin_top = 152.0
margin_right = 798.0
margin_bottom = 249.0
rect_rotation = -360.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 8 )

[node name="bremse" type="TextureButton" parent="."]
margin_left = 430.0
margin_top = 533.0
margin_right = 465.0
margin_bottom = 567.0
rect_scale = Vector2( 1.6, 1.6 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )

[node name="speed" type="TextureButton" parent="."]
margin_left = 504.0
margin_top = 533.0
margin_right = 522.0
margin_bottom = 567.0
rect_scale = Vector2( 1.6, 1.6 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 15 )

[node name="stop" type="TextureButton" parent="."]
margin_left = 553.0
margin_top = 410.0
margin_right = 611.0
margin_bottom = 462.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 18 )
texture_disabled = ExtResource( 18 )

[node name="bakspejl" type="TextureButton" parent="."]
margin_left = 365.0
margin_right = 658.0
margin_bottom = 91.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
texture_disabled = ExtResource( 11 )

[node name="ssv" type="TextureButton" parent="."]
margin_top = 432.0
margin_right = 173.0
margin_bottom = 544.0
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
texture_disabled = ExtResource( 13 )

[node name="ssh" type="TextureButton" parent="."]
margin_left = 852.0
margin_top = 432.0
margin_right = 1023.0
margin_bottom = 545.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 33 )
texture_hover = ExtResource( 33 )
texture_disabled = ExtResource( 33 )

[node name="pilv" type="TextureButton" parent="."]
margin_left = 292.0
margin_top = 410.0
margin_right = 350.0
margin_bottom = 451.0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )

[node name="lysv" type="TextureRect" parent="pilv"]
visible = false
margin_left = -287.0
margin_top = 44.0
margin_right = -280.0
margin_bottom = 107.0
texture = ExtResource( 26 )

[node name="pilh" type="TextureButton" parent="."]
margin_left = 465.0
margin_top = 410.0
margin_right = 523.0
margin_bottom = 451.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 9 )

[node name="lysv2" type="TextureRect" parent="pilh"]
visible = false
margin_left = 550.0
margin_top = 44.0
margin_right = 557.0
margin_bottom = 107.0
texture = ExtResource( 32 )

[node name="skilt" type="TextureButton" parent="."]
margin_left = 744.0
margin_top = 48.0
margin_right = 894.0
margin_bottom = 358.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )

[node name="\?" type="TextureButton" parent="."]
margin_left = 181.0
margin_top = 538.0
margin_right = 578.0
margin_bottom = 935.0
rect_scale = Vector2( 0.15, 0.15 )
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 29 )

[node name="spg" type="ColorRect" parent="."]
margin_left = 216.0
margin_top = 195.0
margin_right = 808.0
margin_bottom = 307.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="spg"]
margin_left = 8.0
margin_top = 8.0
margin_right = 584.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="spg"]
margin_left = 21.0
margin_top = 16.0
margin_right = 568.0
margin_bottom = 97.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Du skal svinge til højre i krydset, hvordan vil du fortsætte?
Hvad skal du være særlig opmærksom på? 
De andre biler skal lige ud af deres vej. Vælg de rigtige svar!"

[node name="rat" type="TextureRect" parent="."]
margin_left = 352.0
margin_top = 416.0
margin_right = 448.0
margin_bottom = 509.0
rect_scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 28 )

[node name="fart" type="TextureRect" parent="."]
margin_left = 216.0
margin_top = 440.0
margin_right = 481.0
margin_bottom = 704.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 27 )

[node name="fart2" type="TextureRect" parent="."]
margin_left = 249.0
margin_top = 499.0
margin_right = 302.0
margin_bottom = 579.0
rect_rotation = -148.6
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 30 )

[node name="hastighed" type="TextureRect" parent="."]
margin_left = 554.0
margin_top = 467.0
margin_right = 819.0
margin_bottom = 731.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 25 )

[node name="hasfart" type="Label" parent="hastighed"]
margin_left = 74.9998
margin_top = 55.0
margin_right = 195.0
margin_bottom = 185.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "18"

[node name="ov" type="Button" parent="."]
margin_left = 638.0
margin_top = 426.0
margin_right = 792.0
margin_bottom = 458.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 3 )
text = "Orientering til venstre"

[node name="oh" type="Button" parent="."]
margin_left = 647.0
margin_top = 472.0
margin_right = 783.0
margin_bottom = 504.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 4 )
text = "Orientering til højre"

[node name="done" type="Button" parent="."]
margin_left = 765.0
margin_top = 550.0
margin_right = 832.0
margin_bottom = 582.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 4 )
text = "Færdig"

[node name="Timer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="resultat" type="ColorRect" parent="."]
visible = false
margin_left = 151.0
margin_top = 56.0
margin_right = 878.0
margin_bottom = 520.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="resultat"]
margin_left = 7.0
margin_top = 8.0
margin_right = 720.0
margin_bottom = 456.0

[node name="titel" type="Label" parent="resultat"]
margin_left = 285.0
margin_top = 24.0
margin_right = 440.0
margin_bottom = 49.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Vigepligt: Bane 1"

[node name="forklar" type="Label" parent="resultat"]
margin_left = 41.0
margin_top = 327.0
margin_right = 706.0
margin_bottom = 372.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Siden de to biler ikke forhindre os i at lave et højre sving kan vi svinge til højre, da alle 
biler skal hver deres vej. Dog skal vi være opmærksom på cyklisten"

[node name="rigtig" type="Label" parent="resultat"]
margin_left = 113.0
margin_top = 72.0
margin_right = 231.0
margin_bottom = 97.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Rigtige svar:"

[node name="r1" type="Label" parent="resultat/rigtig"]
margin_left = -54.0
margin_top = 40.0
margin_right = 174.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "1) Orientering til venstre"

[node name="r2" type="Label" parent="resultat/rigtig"]
margin_left = -54.0
margin_top = 68.0
margin_right = 174.0
margin_bottom = 93.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "2) Højre pil"

[node name="r3" type="Label" parent="resultat/rigtig"]
margin_left = -54.0
margin_top = 96.0
margin_right = 174.0
margin_bottom = 121.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "3) Højre sidespejl"

[node name="r4" type="Label" parent="resultat/rigtig"]
margin_left = -54.0
margin_top = 124.0
margin_right = 174.0
margin_bottom = 149.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "4) Bremse"

[node name="r5" type="Label" parent="resultat/rigtig"]
margin_left = -54.0
margin_top = 152.0
margin_right = 174.0
margin_bottom = 177.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "5) Bakkespejl"

[node name="r6" type="Label" parent="resultat/rigtig"]
margin_left = -54.0
margin_top = 180.0
margin_right = 174.0
margin_bottom = 205.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "6) Ubetinget vigepligt"

[node name="forkert" type="Label" parent="resultat"]
margin_left = 489.0
margin_top = 72.0
margin_right = 622.0
margin_bottom = 97.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Forkerte svar:"

[node name="f1" type="Label" parent="resultat/forkert"]
margin_left = -48.0
margin_top = 40.0
margin_right = 180.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "1) Orientering til højre"

[node name="f2" type="Label" parent="resultat/forkert"]
margin_left = -48.0
margin_top = 68.0
margin_right = 180.0
margin_bottom = 93.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "2) Venstre pil"

[node name="f3" type="Label" parent="resultat/forkert"]
margin_left = -48.0
margin_top = 96.0
margin_right = 180.0
margin_bottom = 121.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "3) Venstre sidespejl"

[node name="f4" type="Label" parent="resultat/forkert"]
margin_left = -48.0
margin_top = 124.0
margin_right = 180.0
margin_bottom = 149.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "4) Speederen"

[node name="f5" type="Label" parent="resultat/forkert"]
margin_left = -48.0
margin_top = 152.0
margin_right = 180.0
margin_bottom = 177.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "5) Havariblink"

[node name="f6" type="Label" parent="resultat/forkert"]
margin_left = -48.0
margin_top = 180.0
margin_right = 180.0
margin_bottom = 205.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "6) Orange modkørende"

[node name="f7" type="Label" parent="resultat/forkert"]
margin_left = -48.0
margin_top = 208.0
margin_right = 180.0
margin_bottom = 233.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "7) Blå modkørende"

[node name="afslut" type="Button" parent="resultat"]
margin_left = 297.0
margin_top = 406.0
margin_right = 433.0
margin_bottom = 438.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 5 )
text = "Afslut"

[node name="stjn1" type="TextureRect" parent="resultat"]
margin_left = 514.0
margin_top = 393.0
margin_right = 564.0
margin_bottom = 443.0
texture = ExtResource( 36 )

[node name="stjn2" type="TextureRect" parent="resultat"]
margin_left = 564.0
margin_top = 393.0
margin_right = 614.0
margin_bottom = 443.0
texture = ExtResource( 36 )

[node name="stjn3" type="TextureRect" parent="resultat"]
margin_left = 614.0
margin_top = 394.0
margin_right = 664.0
margin_bottom = 444.0
texture = ExtResource( 36 )

[node name="stj1" type="TextureRect" parent="resultat"]
visible = false
margin_left = 514.0
margin_top = 393.0
margin_right = 564.0
margin_bottom = 443.0
texture = ExtResource( 35 )

[node name="stj2" type="TextureRect" parent="resultat"]
visible = false
margin_left = 564.0
margin_top = 393.0
margin_right = 614.0
margin_bottom = 443.0
texture = ExtResource( 35 )

[node name="stj3" type="TextureRect" parent="resultat"]
visible = false
margin_left = 614.0
margin_top = 394.0
margin_right = 664.0
margin_bottom = 444.0
texture = ExtResource( 35 )

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 38 )

[connection signal="pressed" from="gbil" to="." method="_on_gbil_pressed"]
[connection signal="pressed" from="bbil" to="." method="_on_bbil_pressed"]
[connection signal="pressed" from="bremse" to="." method="_on_bremse_pressed"]
[connection signal="pressed" from="speed" to="." method="_on_speed_pressed"]
[connection signal="pressed" from="stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="bakspejl" to="." method="_on_bakspejl_pressed"]
[connection signal="pressed" from="ssv" to="." method="_on_ssv_pressed"]
[connection signal="pressed" from="ssh" to="." method="_on_ssh_pressed"]
[connection signal="pressed" from="pilv" to="." method="_on_pilv_pressed"]
[connection signal="pressed" from="pilh" to="." method="_on_pilh_pressed"]
[connection signal="pressed" from="skilt" to="." method="_on_skilt_pressed"]
[connection signal="pressed" from="?" to="." method="_on__pressed"]
[connection signal="pressed" from="ov" to="." method="_on_ov_pressed"]
[connection signal="pressed" from="oh" to="." method="_on_oh_pressed"]
[connection signal="pressed" from="done" to="." method="_on_done_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="resultat/afslut" to="." method="_on_afslut_pressed"]
